Adjusted README. Adjusted gitignore. Added new example and disclaimer to README.

--- a/.gitignore
+++ b/.gitignore
@@ -278,3 +278,6 @@ pipeline_outputs/monitoring_pipeline/piglet_rearing/Kamera3
 pipeline_outputs/monitoring_pipeline/piglet_rearing/Kamera4
 pipeline_outputs/monitoring_pipeline/piglet_rearing/Kamera5
 pipeline_outputs/monitoring_pipeline/piglet_rearing/Kamera6
+
+# notes
+notes.txt
